[package]
name = "super-route-pro"
version = "6.3.0"
description = "Super Route Pro - Network Routing Manager"
authors = ["Zonzon"]
edition = "2021"

[[bin]]
name = "SuperRoute"
path = "src/main.rs"

[lib]
name = "super_route_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
